# textract

./: README.md  pyproject.toml  sampl2e.html  sampl2e.txt
data/processed/text/: ballet%c2%ae_new.txt  ghibli_plus___etichetta_clp_italy.txt  topas_10_ec___etichetta_clp_italy.txt
tablextract/: main.py
textract/: main.py
